project/folder and file reorganisation

--- a/example.env
+++ b/example.env
@@ -10,3 +10,7 @@ SPRING_JPA_HIBERNATE_DDL_AUTO=<VALUE>
 
 # JWT Configuration
 APPLICATION_SECURITY_JWT_SECRET_KEY=<VALUE>
+
+SERVER_PORT=8089
+
+APP_URL=http://localhost:8089
