--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.1"
 
 services:
   db:
-    container_name: mysql-studentportal-db
-    image: mysql:5.7
+    container_name: mysql-libraryportal-db
+    image: mysql:8.3.0
     ports:
-      - "3306:3306"
+      - "3310:3306"
     expose:
       - "3306"
     deploy:
@@ -17,44 +17,31 @@ services:
         MYSQL_USER: ${DATABASE_USER}
         MYSQL_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
-      - mysql_studentportal_data:/var/lib/mysql
+      - mysql_libraryportal_data:/var/lib/mysql
 
   api:
-    container_name: studentportal-api
+    container_name: libraryportal-api
     build:
       dockerfile: Dockerfile
     ports:
-      - "8082:8082"
+      - "8089:8089"
     depends_on:
       - db
     environment:
       SERVER_PORT: ${SERVER_PORT}
-      SPRING_DATASOURCE_URL: ${DATASOURCE_URL}/${DATABASE_NAME}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${DATABASE_USER}
       SPRING_DATASOURCE_PASSWORD: ${DATABASE_PASSWORD}
       SPRING_DATASOURCE_DRIVERCLASSNAME: ${DATABASE_DRIVER_CLASS_NAME}
-      SPRING_JPA_HIBERNATE_DDL-AUTO: ${SPRING_DATA_JPA_DDL}
-      SPRING_JPA_DATABASE: ${SPRING_DATA_JPA_DATABASE}
+      SPRING_JPA_HIBERNATE_DDL-AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
       JWT_SECRET: ${JWT_SECRET}
-      URI_BASE_LIBRARY: ${URI_BASE_LIBRARY}
-      URI_BASE_FINANCE: ${URI_BASE_FINANCE}
     volumes:
-      - studentportal_api:/app
+      - libraryportal_api:/app
     networks:
       - default
 
-  web:
-    container_name: student-web
-    build:
-      context: ../../frontend/student
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      VITE_STUDENT_API_URL: ${VITE_STUDENT_API_URL}
-
 volumes:
-  mysql_studentportal_data:
+  mysql_libraryportal_data:
     driver: local
-  studentportal_api:
+  libraryportal_api:
     driver: local
