--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>uk.ac.leedsbeckett.albertarkaa</groupId>
-    <artifactId>LibraryPortal</artifactId>
+    <artifactId>FinancePortal</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>LibraryPortal</name>
     <description>LibraryPortal</description>
     <properties>
         <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
